<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="90dp"
  android:layout_margin="5dp"
  android:clickable="true"
  android:foreground="?android:attr/selectableItemBackground"
  android:orientation="horizontal"
  android:padding="3dp"
  app:cardCornerRadius="4dp"
  android:focusable="false">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="3dp">

    <ImageView
      android:id="@+id/ivFavsId"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:src="@drawable/ic_heart_uncolored"
      android:contentDescription="@string/favoriteicon" />

    <TextView
      android:id="@+id/tvIsSavedToFavorites"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:text="@string/_false" />

    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:orientation="vertical"
      android:paddingHorizontal="5dp">

      <TextView
        android:id="@+id/tvTypeId"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center_vertical"
        android:text="@string/starbucks"
        android:textSize="18sp"
        android:textStyle="bold" />

      <TextView
        android:id="@+id/tvAddressId"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/address" />
    </LinearLayout>

    <ImageView
      android:id="@+id/ivInfoBtnId"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:src="@drawable/ic_baseline_info_24"
      android:contentDescription="@string/info_icon" />

  </LinearLayout>
</androidx.cardview.widget.CardView>