<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.8"
    android:background="@drawable/cofeebeans"
    android:orientation="vertical"
    tools:context=".SignUpActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignUp"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:alpha=".90"
        android:background="@color/black"
        android:orientation="vertical"
        android:padding="30dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#000000"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="8dp">
                <EditText
                    android:textColorHint="@color/white"
                    android:hint="@string/firstName"
                    android:id="@+id/signUp_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gray2" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp">

                <EditText
                    android:textColorHint="@color/white"
                    android:hint="@string/lastName"
                    android:id="@+id/signUp_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gray2" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="8dp">
            <EditText
                android:textColorHint="@color/white"
                android:hint="@string/username"
                android:id="@+id/signUp_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray2" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="8dp">
            <EditText
                android:textColorHint="@color/white"
                android:hint="@string/email"
                android:id="@+id/signUp_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray2" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="8dp">
            <EditText
                android:textColorHint="@color/white"
                android:hint="@string/password"
                android:id="@+id/signUp_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray2" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="8dp">
            <Button
                android:id="@+id/signUp_register_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray2"
                android:text="@string/register"
                />
        </androidx.cardview.widget.CardView>




    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>
</LinearLayout>