<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/snow_image"
    tools:context=".ProfileActivity">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

        <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="35dp"
          android:layout_marginVertical="3dp"
          android:gravity="center_vertical"
          android:paddingHorizontal="3dp">

            <ImageView
              android:id="@+id/ivNavToolbar"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:srcCompat="@drawable/ic_navi_icon" />

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:text="@string/coffeeLocator"
              android:textColor="#f2f2f2"
              android:textSize="23sp"
              android:textStyle="bold" />

        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:src="@drawable/ic_baseline_person_24"></de.hdodenhof.circleimageview.CircleImageView>

        <Button
            android:id="@+id/profile_saveImage"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:padding="0dp"
            android:text="@string/saveNewProileImage"
            android:textColor="@color/red1"
            android:visibility="invisible" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:alpha=".90"
            android:background="@color/black"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/profile_editnames"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/edit" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#000000"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    app:cardCornerRadius="8dp">

                    <EditText
                        android:id="@+id/profile_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/gray2"
                        android:enabled="false"
                        android:hint="@string/firstName"
                        android:textColor="@color/white" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="8dp">

                    <EditText
                        android:id="@+id/profile_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/gray2"
                        android:enabled="false"
                        android:hint="@string/lastName"
                        android:textColor="@color/white" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp">

                <EditText
                    android:id="@+id/profile_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gray2"
                    android:enabled="false"
                    android:hint="@string/username"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp">

                <EditText
                    android:id="@+id/profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gray2"
                    android:enabled="false"
                    android:hint="@string/email"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/profile_saveNames"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:padding="0dp"
            android:text="@string/saveChanges"
            android:textColor="@color/red1"
            android:visibility="invisible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/profile_deleteAccount"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="15dp"
            android:textColor="@color/red1"
            android:text="@string/delete_account"/>
    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/profile_nav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/side_nav_menu"
        tools:operDrawer="start" />

</androidx.drawerlayout.widget.DrawerLayout>